--- a/app/src/main/res/layout/fragment_conversas.xml
+++ b/app/src/main/res/layout/fragment_conversas.xml
@@ -5,12 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ConversasFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerListaConversas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Conversas"
-        android:textSize="24sp" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
