1 - arquivos desnecessarios deletados 2 - ajuste da toolbar de grupos 3 - começando tela de cadastro de grupo para finalizar

--- a/app/src/main/res/layout/content_grupo.xml
+++ b/app/src/main/res/layout/content_grupo.xml
@@ -16,10 +16,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reclycerMembrosSelecionados"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/cinza_claro"
+        android:scrollbars="horizontal"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reccylcerMembros"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/cinza_claro"
+        android:scrollbars="vertical"/>
 </LinearLayout>
