--- a/app/src/main/res/layout/activity_cadastro_grupo.xml
+++ b/app/src/main/res/layout/activity_cadastro_grupo.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GrupoActivity">
+    tools:context=".CadastroGrupoActivity2">
 
-    <include layout="@layout/content_grupo" />
+    <include layout="@layout/content_cadastro_grupo2" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabGrupo"
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/ic_seta_proximo_branca" />
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
