--- a/app/src/main/res/layout/activity_cadastro_grupo.xml
+++ b/app/src/main/res/layout/activity_cadastro_grupo.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabGrupo"
+        android:id="@+id/fabSalvarGrupo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
