--- a/app/src/main/res/layout/activity_grupo.xml
+++ b/app/src/main/res/layout/activity_grupo.xml
@@ -9,7 +9,7 @@
     <include layout="@layout/content_grupo" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabGrupo"
+        android:id="@+id/fabSalvarGrupo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
