Finalização do APP:
Resolvido:
- dupla listagem de itens
- enviar imagens em Grupo
- Aparecer nome do remetente em Grupo
- ajuste na barra de pesquisa

--- a/app/src/main/res/layout/adapter_mensagem_remetente.xml
+++ b/app/src/main/res/layout/adapter_mensagem_remetente.xml
@@ -17,6 +17,14 @@
         android:background="@drawable/bg_balao_remetente"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textNomeExibicao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nome usuario"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/imageMensagemFoto"
             android:layout_width="wrap_content"
