--- a/app/src/main/res/layout/adapter_mensagem_destinatario.xml
+++ b/app/src/main/res/layout/adapter_mensagem_destinatario.xml
@@ -15,6 +15,14 @@
         android:background="@drawable/bg_balao_destinatario"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textNomeExibicao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nome usuario"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/imageMensagemFoto"
             android:layout_width="match_parent"
